--- a/index.html
+++ b/index.html
@@ -12,18 +12,182 @@
   <meta name="apple-mobile-web-app-title" content="우성고 카드">
   <link rel="apple-touch-icon" href="icon-192.png">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
+
   <style>
     html, body { height: 100%; margin: 0; }
     body { background-color: #e0e5ec; }
     iframe { border: 0; width: 100%; height: 100%; }
-  </style>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js').catch(console.error);
+
+    /* PWA 설치 안내 모달 관련 스타일 */
+    .pwa-modal-overlay {
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.4);
+      backdrop-filter: blur(5px);
+      display: grid;
+      place-items: center;
+      z-index: 10010;
+      padding: 16px;
     }
-  </script>
+    .pwa-modal-content {
+      width: min(420px, 100%);
+      background: #e0e5ec;
+      border-radius: 24px;
+      box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.7), -9px -9px 16px rgba(255, 255, 255, 0.9);
+      padding: 24px 28px;
+      text-align: center;
+      position: relative;
+    }
+    .pwa-modal-close{
+      position:absolute; top:10px; right:12px;
+      background:transparent; border:none; font-size:22px; line-height:1;
+      color: #5a677b; cursor:pointer;
+    }
+    .pwa-modal-text { text-align: left; }
+    .pwa-modal-text strong {
+        font-size: 1.4rem;
+        color: #3d4a5c;
+        font-weight: 700;
+        display: block;
+        margin-bottom: 4px;
+    }
+    .help-steps{
+      margin: 12px 0 8px 20px;
+      padding: 0;
+      line-height: 1.7;
+      font-size: 1.05rem;
+      color: #5a677b;
+    }
+    .help-steps li{ margin: 8px 0; }
+    .help-steps b { color: #3d4a5c; }
+    .help-badge{
+      display:inline-block;
+      font-size:.75rem;
+      font-weight:700;
+      padding:2px 8px;
+      border-radius:999px;
+      background: rgba(0,0,0,.06);
+      color: #3d4a5c;
+    }
+    .pwa-btn{
+      border: none; border-radius: 12px; padding: 12px 16px; font-size: 1rem; font-weight: 700; cursor: pointer;
+      background: #e0e5ec;
+      box-shadow: 4px 4px 8px rgba(163, 177, 198, 0.7), -4px -4px 8px rgba(255, 255, 255, 0.9);
+      color: #007aff;
+      transition: all 0.2s ease;
+    }
+    .pwa-btn:active{ box-shadow: inset 4px 4px 8px rgba(163, 177, 198, 0.7), inset -4px -4px 8px rgba(255, 255, 255, 0.9); transform: scale(.98); }
+    .pwa-btn-ghost{ color: #5a677b; }
+
+    .pwa-modal-actions { margin-top: 18px; display: flex; gap: 12px; }
+    .pwa-modal-actions .pwa-btn { flex: 1; }
+  </style>
+
 </head>
 <body>
   <iframe src="https://script.google.com/macros/s/AKfycbwjEhjg-kro_4Brw-SovaiXg-261HPuBdfh09kilG8L-TcLg6aIfPOr6lMEGAYOIT1fPQ/exec"></iframe>
+
+  <div id="install-help-modal-overlay" class="pwa-modal-overlay" hidden>
+    <div class="pwa-modal-content">
+      <button id="help-close-x" class="pwa-modal-close" aria-label="닫기">
+        <i class="fa-solid fa-xmark"></i>
+      </button>
+      <div class="pwa-modal-text">
+        <strong id="help-title">홈 화면에 추가 안내</strong>
+        <span id="help-badge" class="help-badge" aria-hidden="true"></span>
+        <ol id="help-steps" class="help-steps"></ol>
+      </div>
+      <div class="pwa-modal-actions">
+        <button id="help-close-simple-btn" class="pwa-btn pwa-btn-ghost">닫기</button>
+        <button id="help-hide-day-btn" class="pwa-btn">오늘 하루 보지 않기</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+      const LS_KEY_DAY = 'installHelpDismissedDay';
+      const modalOverlay = document.getElementById('install-help-modal-overlay');
+      const ua = navigator.userAgent || '';
+      const isiOS = /iPhone|iPad|iPod/i.test(ua);
+
+      // --- 핵심 수정: 크롬의 자동 배너를 강제로 비활성화합니다 ---
+      window.addEventListener('beforeinstallprompt', (e) => {
+          e.preventDefault();
+      });
+
+      const isStandaloneNow = () => {
+          try {
+              const isStandalone = window.matchMedia('(display-mode: standalone)').matches;
+              const isIOSStandalone = isiOS && window.navigator.standalone === true;
+              return isStandalone || isIOSStandalone;
+          } catch (e) {
+              return false;
+          }
+      };
+
+      if (isStandaloneNow()) {
+          if (modalOverlay) modalOverlay.hidden = true;
+          return;
+      }
+
+      const guide = {
+          android_chrome: { badge: 'Android · Chrome', steps: ['오른쪽 위 <b>⋮ 메뉴</b>를 누릅니다.', '<b>앱 설치</b> 또는 <b>홈 화면에 추가</b>를 선택합니다.']},
+          android_samsung: { badge: 'Android · Samsung Internet', steps: ['오른쪽 아래 <b>≡ 메뉴</b>를 누릅니다.', '<b>페이지 추가</b>를 선택합니다.', '<b>홈 화면</b>을 눌러 완료합니다.']},
+          ios_safari: { badge: 'iOS · Safari', steps: ['하단의 <b>공유 버튼(□↑)</b>을 누릅니다.', '<b>홈 화면에 추가</b>를 선택합니다.', '오른쪽 위 <b>추가</b>를 눌러 완료합니다.']},
+          default: { badge: '안내', steps: ['브라우저의 <b>메뉴</b>를 엽니다.', '<b>홈 화면에 추가</b> 또는 <b>앱 설치</b>를 선택합니다.']}
+      };
+
+      const pickKey = () => {
+          const isSamsung = /SamsungBrowser/i.test(ua);
+          const isChromeAn = /Android/i.test(ua) && /Chrome\/\d+/i.test(ua) && !isSamsung;
+          const isSafariIOS = isiOS && /Safari/i.test(ua) && !/CriOS|FxiOS|EdgiOS/i.test(ua);
+
+          if (isChromeAn) return 'android_chrome';
+          if (isSamsung) return 'android_samsung';
+          if (isSafariIOS) return 'ios_safari';
+          return 'default';
+      };
+      
+      const guideConfig = guide[pickKey()] || guide.default;
+
+      const openModal = () => {
+          if (!modalOverlay) return;
+          document.getElementById('help-title').textContent = '홈 화면에 추가 안내';
+          document.getElementById('help-badge').textContent = guideConfig.badge;
+          document.getElementById('help-steps').innerHTML = guideConfig.steps.map(s => `<li>${s}</li>`).join('');
+          modalOverlay.hidden = false;
+      };
+
+      const hideModal = () => {
+          if (modalOverlay) modalOverlay.hidden = true;
+      };
+
+      const hideToday = () => {
+          localStorage.setItem(LS_KEY_DAY, new Date().toDateString());
+          hideModal();
+      };
+
+      const showModalIfNeeded = () => {
+          const dismissedToday = localStorage.getItem(LS_KEY_DAY) === new Date().toDateString();
+          if (dismissedToday) {
+              return;
+          }
+          openModal();
+      };
+
+      // 이벤트 연결
+      document.getElementById('help-close-x')?.addEventListener('click', hideModal);
+      document.getElementById('help-close-simple-btn')?.addEventListener('click', hideModal);
+      document.getElementById('help-hide-day-btn')?.addEventListener('click', hideToday);
+      modalOverlay?.addEventListener('click', (e) => {
+          if (e.target === modalOverlay) hideModal();
+      });
+
+      // 최초 실행
+      setTimeout(showModalIfNeeded, 1200);
+  });
+  </script>
 </body>
 </html>
