--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
           return; 
       }
 
-      // --- 요청하신 내용으로 수정된 최종 안내 문구 ---
       const guide = {
           android_chrome: { 
               title: 'Chrome에서 설치', 
@@ -156,7 +155,7 @@
       reopenBtn?.addEventListener('click', openInstallModal);
 
       // 모달 최초 실행 (설치하지 않은 모든 브라우저에서)
-      setTimeout(openInstallál, 1500);
+      setTimeout(openInstallModal, 1500);
   });
   </script>
 </body>
