--- a/index.html
+++ b/index.html
@@ -86,36 +86,37 @@
           return; 
       }
 
+      // --- 요청하신 '단답형' 스타일로 수정된 최종 안내 문구 ---
       const guide = {
           android_chrome: { 
               title: 'Chrome에서 설치', 
               steps: [
-                  '화면 오른쪽 위에 있는 <b>점 3개(⋮) 모양의 메뉴</b> 버튼을 누릅니다.',
-                  '열리는 메뉴에서 <b>\'홈 화면에 추가\'</b> 항목을 찾아서 선택합니다.',
-                  '팝업창이 뜨면 \'설치\'와 \'바로가기 만들기\' 중 <b>\'설치\'</b> 버튼을 눌러 완료합니다.'
+                  '화면 오른쪽 위에 있는 <b>점 3개(⋮) 모양의 메뉴</b> 버튼 클릭.',
+                  '열리는 메뉴에서 <b>\'홈 화면에 추가\'</b> 항목 선택.',
+                  '팝업창에서 <b>\'설치\'</b> 버튼 클릭.'
               ]
           },
           android_samsung: { 
               title: '삼성 인터넷에서 설치', 
               steps: [
-                  '화면 오른쪽 아래에 있는 <b>선 3개(≡) 모양의 메뉴</b> 버튼을 누릅니다.',
-                  '열리는 메뉴에서 <b>\'추가\'</b> 버튼을 선택합니다.',
-                  '다음 메뉴에서 <b>\'웹앱으로 설치\'</b>를 선택하면 설치가 완료됩니다.'
+                  '화면 오른쪽 아래에 있는 <b>선 3개(≡) 모양의 메뉴</b> 클릭.',
+                  '열리는 메뉴에서 <b>\'추가\'</b> 버튼 선택.',
+                  '다음 메뉴에서 <b>\'웹앱으로 설치\'</b> 선택.'
               ]
           },
           ios_safari: { 
               title: 'iPhone/iPad에서 설치', 
               steps: [
-                  '화면 하단 중앙에 있는 <b>공유 버튼(네모 안에 위쪽 화살표가 있는 아이콘: □↑)</b>을 누릅니다.',
-                  '나타나는 여러 옵션 중에서 아래로 스크롤하여 <b>\'홈 화면에 추가\'</b>를 찾아서 선택합니다.',
-                  '오른쪽 위에 있는 <b>\'추가\'</b> 버튼을 눌러 완료합니다.'
+                  '화면 하단 중앙의 <b>공유 버튼(□↑)</b> 클릭.',
+                  '<b>\'홈 화면에 추가\'</b> 항목 선택.',
+                  '오른쪽 위의 <b>\'추가\'</b> 버튼 클릭.'
               ]
           },
           default: { 
               title: '홈 화면에 추가 안내', 
               steps: [
-                  '브라우저의 <b>메뉴</b>를 엽니다.',
-                  '<b>홈 화면에 추가</b> 또는 <b>앱 설치</b>를 선택합니다.'
+                  '브라우저의 <b>메뉴</b> 열기.',
+                  '<b>\'홈 화면에 추가\'</b> 또는 <b>\'앱 설치\'</b> 선택.'
               ]
           }
       };
