--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           android_chrome: { 
               title: 'Chrome에서 설치', 
               steps: [
-                  '화면 오른쪽 위에 있는 <b>점 3개(⋮) 모양의 메뉴</b> 버튼 클릭.',
+                  '오른쪽 위에 있는 <b>점 3개(⋮) 모양의 메뉴</b> 버튼 클릭.',
                   '열리는 메뉴에서 <b>\'홈 화면에 추가\'</b> 항목 선택.',
                   '팝업창에서 <b>\'설치\'</b> 버튼 클릭.'
               ]
@@ -98,7 +98,7 @@
           android_samsung: { 
               title: '삼성 인터넷에서 설치', 
               steps: [
-                  '화면 오른쪽 아래에 있는 <b>선 3개(≡) 모양의 메뉴</b> 클릭.',
+                  '오른쪽 아래에 있는 <b>선 3개(≡) 모양의 메뉴</b> 클릭.',
                   '열리는 메뉴에서 <b>\'추가\'</b> 버튼 선택.',
                   '다음 메뉴에서 <b>\'웹앱으로 설치\'</b> 선택.'
               ]
@@ -162,3 +162,4 @@
   </script>
 </body>
 </html>
+
