--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>우성고 카드 시스템 설치</title>
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#007aff">
+  <meta name="theme-color" content="#e0e5ec">
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -77,7 +77,7 @@
     .install-guide li {
         margin: 10px 0;
     }
-    .install-guide i {
+    .install-guide i.fa-solid, .install-guide i.fab {
         margin-right: 10px;
         color: #007aff;
     }
@@ -104,7 +104,7 @@
         <div id="guide-chrome" class="install-guide">
             <h2><i class="fab fa-chrome"></i>Chrome (크롬)</h2>
             <ol>
-                <li>오른쪽 위<b>점 3개(⋮) 모양의 메뉴</b> 버튼 클릭.</li>
+                <li>오른쪽 위 <b>점 3개(⋮) 모양의 메뉴</b> 버튼 클릭.</li>
                 <li>열리는 메뉴에서 <b>'홈 화면에 추가'</b> 항목 선택.</li>
                 <li>팝업창에서 <b>'설치'</b> 버튼 클릭.</li>
             </ol>
@@ -122,9 +122,9 @@
         <div id="guide-ios" class="install-guide">
             <h2><i class="fab fa-apple"></i>iPhone / iPad (아이폰)</h2>
             <ol>
-                <li>상단or하단 <b>메뉴(공유 □↑ 또는 …)</b> 클릭.</li>
-                <li>열리는 메뉴에서 <b>'홈 화면에 추가'</b>를 찾습니다.<br><small>(만약 보이지 않으면, 목록 하단의 '더보기'나 '편집'을 눌러 추가할 수 있습니다.)</small></li>
-                <li>오른쪽 위의 <b>'추가'</b> 버튼을 눌러 설치를 완료합니다.</li>
+                <li>상단or하단 <b>공유 버튼(<i class="fa-solid fa-arrow-up-from-square"></i>)</b> 또는 <b>메뉴(⋯)</b> 클릭.</li>
+                <li><b>'홈 화면에 추가'</b> 항목 선택.<br><small>(없으면 목록 하단의 '더보기' 또는 '편집' 확인)</small></li>
+                <li>오른쪽 위 <b>'추가'</b> 버튼 클릭.</li>
             </ol>
         </div>
     </div>
@@ -154,8 +154,7 @@
           const isSamsung = /SamsungBrowser/i.test(ua);
           if (isSamsung) return 'samsung';
           
-          // 그 외 안드로이드 브라우저는 대부분 크롬 기반이므로 chrome 안내를 기본으로 보여줍니다.
-          return 'chrome'; 
+          return 'chrome'; // 그 외 안드로이드 브라우저는 크롬 안내를 기본으로 보여줍니다.
       };
       
       const guideElement = document.getElementById(`guide-${pickKey()}`);
