--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <div id="guide-chrome" class="install-guide">
             <h2><i class="fab fa-chrome"></i>Chrome (크롬)</h2>
             <ol>
-                <li>오른쪽 위 <b>점 3개(⋮) 모양의 메뉴</b> 버튼 클릭.</li>
-                <li>열리는 메뉴에서 <b>'홈 화면에 추가'</b> 항목 선택.</li>
+                <li>오른쪽 위 <b>점 3개(⋮)모양 메뉴</b> 버튼 클릭.</li>
+                <li>메뉴에서 <b>'홈 화면에 추가'</b> 항목 선택.</li>
                 <li>팝업창에서 <b>'설치'</b> 버튼 클릭.</li>
             </ol>
         </div>
@@ -113,18 +113,18 @@
         <div id="guide-samsung" class="install-guide">
             <h2><i class="fa-solid fa-mobile-screen-button"></i>Samsung Internet (삼성)</h2>
             <ol>
-                <li>오른쪽 아래 <b>선 3개(≡) 모양의 메뉴</b> 클릭.</li>
-                <li>열리는 메뉴에서 <b>'추가'</b> 버튼 선택.</li>
-                <li>다음 메뉴에서 <b>'웹앱으로 설치'</b> 선택.</li>
+                <li>오른쪽 아래 <b>선 3개(≡)모양 메뉴</b> 클릭.</li>
+                <li>메뉴에서 <b>'추가'</b> 버튼 선택.</li>
+                <li>메뉴에서 <b>'웹앱으로 설치'</b> 선택.</li>
             </ol>
         </div>
 
         <div id="guide-ios" class="install-guide">
             <h2><i class="fab fa-apple"></i>iPhone / iPad (아이폰)</h2>
             <ol>
-                <li>상단or하단 <b>공유 버튼(<i class="fa-solid fa-arrow-up-from-square"></i>)</b> 또는 <b>메뉴(⋯)</b> 클릭.</li>
+                <li>상단or하단 <b>공유 버튼⬆️</b> 또는 <b>메뉴(⋯)</b> 클릭.</li>
                 <li><b>'홈 화면에 추가'</b> 항목 선택.<br><small>(없으면 목록 하단의 '더보기' 또는 '편집' 확인)</small></li>
-                <li>오른쪽 위 <b>'추가'</b> 버튼 클릭.</li>
+                <li>메뉴에서 <b>'추가'</b> 버튼 클릭.</li>
             </ol>
         </div>
     </div>
@@ -165,3 +165,4 @@
   </script>
 </body>
 </html>
+
