--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>우성고 카드 시스템</title>
+  <title>우성고 카드 시스템 설치</title>
 
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#e0e5ec" media="(prefers-color-scheme: light)">
@@ -58,22 +58,32 @@
     <div class="guide-card">
         <h1>📱 앱 설치 안내</h1>
         <p>최상의 경험을 위해 홈 화면에 앱을 추가하여 사용해주세요.</p>
+        
         <div id="guide-chrome" class="install-guide">
             <h2><i class="fab fa-chrome"></i>Chrome (크롬)</h2>
             <ol>
-                <li>오른쪽 위 <b>점 3개(⋮)모양 메뉴</b> 클릭 후 <b>'앱 설치'</b> 선택</li>
+                <li>오른쪽 위 <b>(⋮)모양 메뉴</b> 클릭.</li>
+                <li>메뉴에서 <b>'홈 화면에 추가'</b> 항목 선택.</li>
+                <li>메뉴에서 <b>'설치'</b> 버튼 클릭.</li>
             </ol>
         </div>
+        
         <div id="guide-samsung" class="install-guide">
-            <h2><i class="fa-solid fa-mobile-screen-button"></i>Samsung Internet</h2>
+            <h2><i class="fa-solid fa-mobile-screen-button"></i>Samsung Internet (삼성)</h2>
             <ol>
-                <li>오른쪽 아래 <b>메뉴(≡) > '페이지 추가' > '홈 화면'</b> 선택</li>
+                <li>오른쪽 아래 <b>(≡)모양 메뉴</b> 클릭.</li>
+                <li>메뉴에서 <b>'추가'</b> 항목 선택.</li>
+                <li>메뉴에서 <b>'웹앱으로 설치'</b> 선택.</li>
             </ol>
         </div>
+
         <div id="guide-ios" class="install-guide">
-            <h2><i class="fab fa-apple"></i>iPhone / iPad</h2>
+            <h2><i class="fab fa-apple"></i>iPhone / iPad (아이폰)</h2>
             <ol>
-                <li>하단 중앙 <b>공유(⬆️) 버튼 > '홈 화면에 추가'</b> 선택</li>
+                <li>상단or하단 <b>공유 버튼(⬆️)</b> 클릭.</li>
+                <li>메뉴에서 <b>'더보기'</b> 항목 선택.</li>
+                <li><b>'홈 화면에 추가'</b> 항목 선택.</li>
+                <li><b>'추가'</b> 버튼 클릭.</li>
             </ol>
         </div>
     </div>
