--- a/index.html
+++ b/index.html
@@ -16,81 +16,132 @@
   <link rel="apple-touch-icon" href="./icon-192.png" />
 
   <style>
-    html, body { height: 100%; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+    }
+
     body {
-      display: flex; justify-content: center; align-items: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       background: linear-gradient(-45deg, #e0e5ec, #d1d9e6, #c8d0e7, #b8c6dc);
       background-size: 400% 400%;
-      animation: gradient-bg 15s ease infinite;
+      animation: bg 15s ease infinite;
       color: #3d4a5c;
     }
-    @keyframes gradient-bg {
+
+    @keyframes bg {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
     .wrap { width: min(560px, 92vw); }
+
     .card {
       background: #e0e5ec;
       border-radius: 26px;
       padding: 26px;
-      box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.7), -9px -9px 16px rgba(255, 255, 255, 0.9);
+      box-shadow:
+        9px 9px 16px rgba(163,177,198,.7),
+       -9px -9px 16px rgba(255,255,255,.9);
     }
-    h1 { margin: 0 0 8px; font-size: 1.6rem; text-align: center; }
-    .desc { margin: 0 0 14px; color: #5a677b; text-align: center; line-height: 1.5; }
+
+    h1 {
+      margin: 0 0 8px;
+      text-align: center;
+      font-size: 1.6rem;
+    }
+
+    .desc {
+      text-align: center;
+      color: #5a677b;
+      margin-bottom: 14px;
+      line-height: 1.5;
+    }
 
     .badge {
       display: inline-block;
-      padding: 6px 10px;
+      padding: 6px 12px;
       border-radius: 999px;
-      background: rgba(0,0,0,0.06);
-      font-size: 0.9rem;
+      background: rgba(0,0,0,.06);
+      font-size: .9rem;
     }
+
     .center { text-align: center; }
 
     .warn {
       margin-top: 10px;
-      color: #d63031;
       font-weight: 800;
+      color: #d63031;
     }
 
-    ol { margin: 12px 0 0 18px; padding: 0; color: #5a677b; line-height: 1.8; }
+    ol {
+      margin: 12px 0 0 18px;
+      padding: 0;
+      line-height: 1.8;
+      color: #5a677b;
+    }
+
     li { margin: 8px 0; }
 
-    .btns { display: flex; justify-content: center; margin-top: 16px; }
+    .btns {
+      display: flex;
+      justify-content: center;
+      margin-top: 18px;
+      width: 100%;
+    }
+
     button {
       border: 0;
       border-radius: 14px;
-      padding: 12px 16px;
+      padding: 12px 20px;
       cursor: pointer;
       background: #ffffff80;
       color: #2f3a4a;
       font-weight: 800;
-      box-shadow: 6px 6px 12px rgba(163, 177, 198, 0.45), -6px -6px 12px rgba(255, 255, 255, 0.75);
+      box-shadow:
+        6px 6px 12px rgba(163,177,198,.45),
+       -6px -6px 12px rgba(255,255,255,.75);
+
+      /* ✅ 텍스트 중앙정렬 핵심 */
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      min-width: 140px;
     }
+
     button:active { transform: translateY(1px); }
 
     iframe {
-      border: 0;
-      width: 100%;
-      height: 100%;
       position: fixed;
       inset: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
       display: none;
-      -webkit-overflow-scrolling: touch;
       background: #fff;
+      -webkit-overflow-scrolling: touch;
     }
 
     .hide { display: none !important; }
-    .small { font-size: 0.9rem; color: #6b7890; margin-top: 12px; line-height: 1.5; text-align: center; }
+
+    .small {
+      margin-top: 14px;
+      font-size: .9rem;
+      color: #6b7890;
+      text-align: center;
+      line-height: 1.5;
+    }
   </style>
 
   <script>
-    // ✅ GAS 웹앱 주소
-    const APP_URL = "https://script.google.com/macros/s/AKfycbzLyWl4cHIEmwPDhjMGADoWN1MHa2OLhkVtcJldWDlHzRgyz-Yb9CGNleaiwmrV1-ZvBg/exec";
+    const APP_URL =
+      "https://script.google.com/macros/s/AKfycbzLyWl4cHIEmwPDhjMGADoWN1MHa2OLhkVtcJldWDlHzRgyz-Yb9CGNleaiwmrV1-ZvBg/exec";
 
-    // 서비스워커 등록
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("./sw.js", { scope: "./" }).catch(console.error);
     }
@@ -98,136 +149,119 @@
 </head>
 
 <body>
-  <iframe
-    id="appFrame"
-    title="우성고 카드"
-    allow="camera; microphone; geolocation; autoplay; payment; fullscreen"
-  ></iframe>
 
-  <div id="installUI" class="wrap">
-    <div class="card">
-      <h1>📱 우성고 카드 설치 안내</h1>
-      <p class="desc" id="topMsg">홈 화면에 추가해서 앱처럼 사용해주세요.</p>
+<iframe
+  id="appFrame"
+  allow="camera; microphone; geolocation; autoplay; fullscreen">
+</iframe>
 
-      <div class="center">
-        <span class="badge" id="envBadge">환경 확인 중…</span>
-        <div id="warnMsg" class="warn hide">인앱 브라우저에서는 설치가 안 될 수 있어요.</div>
-      </div>
+<div id="installUI" class="wrap">
+  <div class="card">
+    <h1>📱 우성고 카드 설치</h1>
+    <p class="desc" id="topMsg">홈 화면에 추가해서 앱처럼 사용해주세요.</p>
 
-      <ol id="steps"></ol>
-
-      <!-- 안드로이드에서 beforeinstallprompt 뜰 때만 나타나는 버튼 -->
-      <div class="btns">
-        <button id="installBtn" class="hide" type="button">설치하기</button>
-      </div>
-
-      <div class="small">
-        설치가 완료되면 홈 화면의 아이콘으로 실행했을 때 자동으로 앱 화면이 열립니다.
+    <div class="center">
+      <span class="badge" id="envBadge">환경 확인 중…</span>
+      <div id="warnMsg" class="warn hide">
+        카카오톡·네이버 등 앱 안에서는 설치가 불가능합니다.
       </div>
     </div>
+
+    <ol id="steps"></ol>
+
+    <div class="btns">
+      <button id="installBtn" class="hide" type="button">설치하기</button>
+    </div>
+
+    <div class="small">
+      설치 후에는 홈 화면의 <b>우성고 카드</b> 아이콘으로 실행하세요.
+    </div>
   </div>
+</div>
 
-  <script>
-    const $ = (id) => document.getElementById(id);
+<script>
+  const $ = id => document.getElementById(id);
 
-    function setSteps(items) {
-      const ol = $("steps");
-      ol.innerHTML = "";
-      items.forEach((t) => {
-        const li = document.createElement("li");
-        li.innerHTML = t;
-        ol.appendChild(li);
-      });
+  function showApp() {
+    $("installUI").classList.add("hide");
+    const f = $("appFrame");
+    f.src = APP_URL;
+    f.style.display = "block";
+  }
+
+  function setSteps(arr) {
+    $("steps").innerHTML = arr.map(v => `<li>${v}</li>`).join("");
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+
+    const isStandalone =
+      window.matchMedia("(display-mode: standalone)").matches ||
+      window.navigator.standalone === true;
+
+    if (isStandalone) {
+      showApp();
+      return;
     }
 
-    function showApp() {
-      $("installUI").classList.add("hide");
-      const f = $("appFrame");
-      f.src = APP_URL;
-      f.style.display = "block";
+    const ua = navigator.userAgent.toLowerCase();
+    const isiOS = /iphone|ipad|ipod/.test(ua);
+    const isAndroid = /android/.test(ua);
+
+    const isInApp =
+      ua.includes("kakaotalk") ||
+      (ua.includes("naver") && ua.includes("inapp")) ||
+      ua.includes("instagram") ||
+      ua.includes("fbav");
+
+    $("envBadge").textContent =
+      isInApp ? "인앱 브라우저" : isiOS ? "iOS" : "Android";
+
+    if (isInApp) {
+      $("warnMsg").classList.remove("hide");
+      $("topMsg").innerHTML =
+        "설치를 위해 <b>외부 브라우저</b>로 열어주세요.";
+
+      setSteps([
+        "상단 또는 하단의 <b>공유 / ⋯ 메뉴</b>를 누르세요.",
+        "<b>다른 브라우저로 열기</b>를 선택하세요.",
+        "열린 브라우저에서 다시 설치를 진행하세요."
+      ]);
+      return;
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      // 1) 설치(standalone) 실행이면 앱 표시
-      const isStandalone =
-        window.matchMedia("(display-mode: standalone)").matches ||
-        window.navigator.standalone === true;
+    if (isiOS) {
+      $("topMsg").innerHTML =
+        "아이폰은 <b>공유 메뉴 → 홈 화면에 추가</b>로 설치합니다.";
 
-      if (isStandalone) {
-        showApp();
-        return;
-      }
+      setSteps([
+        "<b>공유 버튼(⬆︎)</b>을 누르세요.",
+        "<b>홈 화면에 추가</b>를 선택하세요.",
+        "<b>추가</b>를 눌러 설치를 완료하세요.",
+        "※ 메뉴에 없으면 <b>Safari</b>로 다시 열어주세요."
+      ]);
+      return;
+    }
 
-      // 2) 환경 감지
-      const ua = (navigator.userAgent || "").toLowerCase();
-      const isiOS = /iphone|ipad|ipod/.test(ua);
-      const isAndroid = /android/.test(ua);
+    // ✅ 안드로이드: 설명 없이 버튼만
+    $("topMsg").innerHTML = "아래 버튼을 눌러 앱을 설치하세요.";
+    setSteps([]);
 
-      const isInApp =
-        ua.includes("kakaotalk") ||
-        ua.includes("kakao") ||
-        (ua.includes("naver") && ua.includes("inapp")) ||
-        ua.includes("daumapps") ||
-        ua.includes("instagram") ||
-        ua.includes("fbav") ||
-        ua.includes("fban") ||
-        ua.includes("snapchat") ||
-        ua.includes("line");
-
-      let badge = "일반 브라우저";
-      if (isInApp) badge = "인앱 브라우저(카톡/네이버 등)";
-      else if (isiOS) badge = "iPhone / iPad";
-      else if (isAndroid) badge = "Android";
-      $("envBadge").textContent = badge;
-
-      // 3) 안내
-      if (isInApp) {
-        $("warnMsg").classList.remove("hide");
-        $("topMsg").innerHTML =
-          "지금은 <b style='color:#d63031'>앱 안에서 열린 화면</b>이라 설치가 어려울 수 있어요.<br/>먼저 <b>외부 브라우저</b>로 열어주세요.";
-
-        setSteps([
-          "상단/하단의 <b>공유</b> 또는 <b>⋯(점 3개)</b> 메뉴를 누르세요.",
-          "<b>“다른 브라우저로 열기 / 기본 브라우저로 열기”</b>를 선택하세요.",
-          "외부 브라우저로 열린 뒤, 아래 설치 방법대로 <b>홈 화면에 추가</b>를 진행하세요."
-        ]);
-      } else if (isiOS) {
-        $("topMsg").innerHTML =
-          "iOS는 보통 <b>공유 메뉴 → 홈 화면에 추가</b>로 설치합니다.";
-
-        setSteps([
-          "<b>공유 버튼(⬆︎)</b>을 누르세요.",
-          "목록에서 <b>“홈 화면에 추가”</b>를 찾아 누르세요.",
-          "우측 상단 <b>“추가”</b>를 누르세요.",
-          "※ 만약 <b>“홈 화면에 추가”</b>가 안 보이면 <b>Safari로 열어서</b> 다시 시도하세요."
-        ]);
-      } else {
-        $("topMsg").innerHTML =
-          "안드로이드는 <b>앱 설치</b> 또는 <b>홈 화면에 추가</b>로 설치합니다.";
-
-        setSteps([
-          "우측 상단 <b>⋮(점 3개)</b> 메뉴를 누르세요.",
-          "<b>“앱 설치”</b> 또는 <b>“홈 화면에 추가”</b>를 선택하세요.",
-          "<b>설치</b>를 눌러 완료하세요."
-        ]);
-      }
-
-      // 4) 안드로이드(지원 브라우저)에서만 '설치하기' 버튼 활성화
-      let deferredPrompt = null;
-      window.addEventListener("beforeinstallprompt", (e) => {
-        e.preventDefault();
-        deferredPrompt = e;
-        $("installBtn").classList.remove("hide");
-      });
-
-      $("installBtn").addEventListener("click", async () => {
-        if (!deferredPrompt) return;
-        deferredPrompt.prompt();
-        try { await deferredPrompt.userChoice; } catch (e) {}
-        deferredPrompt = null;
-        $("installBtn").classList.add("hide");
-      });
+    let deferredPrompt = null;
+    window.addEventListener("beforeinstallprompt", e => {
+      e.preventDefault();
+      deferredPrompt = e;
+      $("installBtn").classList.remove("hide");
     });
-  </script>
+
+    $("installBtn").addEventListener("click", async () => {
+      if (!deferredPrompt) return;
+      deferredPrompt.prompt();
+      await deferredPrompt.userChoice.catch(()=>{});
+      deferredPrompt = null;
+    });
+  });
+</script>
+
 </body>
 </html>
